<!--
  ~ Copyright 2018 The app Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<androidx.preference.PreferenceScreen
	xmlns:app="http://schemas.android.com/apk/res-auto">

	<ListPreference
		app:defaultValue="Claro"
		app:entries="@array/temas"
		app:entryValues="@array/temas"
		app:key="tema"
		app:title="@string/tema_aplicacion"
		app:useSimpleSummaryProvider="true" />

	<SwitchPreferenceCompat
		app:key="reproductor"
		app:summaryOff="@string/reproductor_externo_off"
		app:summaryOn="@string/reproductor_externo_on"
		app:title="@string/reproductor" />

	<ListPreference
		app:defaultValue="@string/auto"
		app:entries="@array/languages"
		app:entryValues="@array/lang"
		app:key="lang"
		app:title="@string/idioma_aplicacion"
		app:useSimpleSummaryProvider="true" />
</androidx.preference.PreferenceScreen>
