<?xml version="1.0" encoding="utf-8"?>
<!--
~
~   Copyright 2019 Juanro49
~
~   Licensed under the Apache License, Version 2.0 (the "License");
~   you may not use this file except in compliance with the License.
~   You may obtain a copy of the License at
~
~       http://www.apache.org/licenses/LICENSE-2.0
~
~   Unless required by applicable law or agreed to in writing, software
~   distributed under the License is distributed on an "AS IS" BASIS,
~   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
~   See the License for the specific language governing permissions and
~   limitations under the License.
~
~
-->
<menu xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto">

	<group android:id="@+id/group_main" android:checkableBehavior="single">
		<item
			android:id="@+id/nav_home"
			android:icon="@android:drawable/ic_menu_today"
			android:title="@string/title_recentNews" />

		<item
			android:id="@+id/tv"
			android:icon="@android:drawable/ic_menu_view"
			android:title="@string/watch_tv" />

		<item
			android:id="@+id/radio"
			android:icon="@android:drawable/ic_lock_silent_mode_off"
			android:title="@string/listen_radio" />

		<item
			android:id="@+id/custom_m3u"
			android:icon="@android:drawable/ic_menu_manage"
			android:title="@string/custom_m3u" />
	</group>

	<item android:id="@+id/menu_feeds_root" android:title="Fuentes RSS">
		<menu>
			<!-- El submenú para los Feeds RSS se poblará dinámicamente -->
			<group android:id="@+id/group_feeds" android:checkableBehavior="single" />

			<item
				android:id="@+id/addFeed"
				android:icon="@android:drawable/ic_menu_add"
				android:title="@string/add_feed" />

			<item
				android:id="@+id/manage_feeds"
				android:icon="@android:drawable/ic_menu_edit"
				android:title="@string/title_dialog_rss_list" />
		</menu>
	</item>

	<item android:id="@+id/menu_settings_root" android:title="@string/settings">
		<menu>
			<item
				android:id="@+id/ajustes"
				android:icon="@android:drawable/ic_menu_preferences"
				android:title="@string/settings" />

			<item
				android:id="@+id/about"
				android:icon="@android:drawable/ic_menu_info_details"
				android:title="@string/action_about" />
		</menu>
	</item>
</menu>
